Replaced GuardianBeam dependency with Paper API calls to support 1.21.